--- a/config/locales/general.pt-BR.yml
+++ b/config/locales/general.pt-BR.yml
@@ -87,7 +87,7 @@ pt-BR:
     sessions:
       already_signed_out: Logout efetuado com sucesso.
       new:
-        sign_in: Login
+        sign_in: Entrar
       signed_in: Login efetuado com sucesso.
       signed_out: Logout efetuado com sucesso.
     shared:
