--- a/config/locales/product_ad.pt-BR.yml
+++ b/config/locales/product_ad.pt-BR.yml
@@ -10,5 +10,5 @@ pt-BR:
         price: 'Preço'
         usage_time: 'Tempo de uso'
         warranty: 'Garantia'
-        expiration_time: 'Duração do anúncio(dias)'
+        expiration_time: 'Duração do anúncio'
         accepted_rule: 'Li e concordo com as regras da plataforma.'
